添加点击事件防抖插件

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':myJarjar', 'annotation-plugin'
+include ':app', ':myJarjar', ':annotation-plugin', ':click-anti-shake', ':secondlibrary'
