--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
-apply plugin: 'click-anti-shake'
+//apply plugin: 'click-anti-shake'
 
 android {
     compileSdkVersion 28
@@ -24,9 +24,9 @@ android {
     }
 }
 
-clickAntiShake{
-    antiMillis = 150
-}
+//clickAntiShake{
+//    antiMillis = 150
+//}
 
 dependencies {
 
