--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,14 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven {
-            url uri('repo')
-        }
+//        maven {
+//            url uri('repo')
+//        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.yankaibang.click-anti-shake:click-anti-shake:1.0.0'
+//        classpath 'com.yankaibang.click-anti-shake:click-anti-shake:1.0.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
